--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
         <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <apache.commons.version>4.4</apache.commons.version>
+        <apache.calcite.version>1.36.0</apache.calcite.version>
     </properties>
     <dependencies>
         <dependency>
@@ -62,12 +65,16 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>4.4</version>
+            <version>${apache.commons.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.14.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.calcite</groupId>
+            <artifactId>calcite-core</artifactId>
+            <version>${apache.calcite.version}</version>
         </dependency>
     </dependencies>
 
