在pom.xml中添加Apache Calcite依赖，并新增CalciteSqlGeneratorTests测试类，包含基本JSON到SQL的转换、过滤条件和表连接的测试用例。

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,8 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+
+        <!-- apache calcite -->
         <dependency>
             <groupId>org.apache.calcite</groupId>
             <artifactId>calcite-core</artifactId>
