更新pom.xml以升级Apache Calcite版本至1.39.0，新增Calcite相关文档，重构SQL构建类，优化InsertSqlBuilder以使用jOOQ构建SQL，删除SqlBuilder接口，增强元数据管理，支持持久化操作，更新测试用例以验证新逻辑。

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <apache.commons.version>4.4</apache.commons.version>
-        <apache.calcite.version>1.36.0</apache.calcite.version>
+        <apache.calcite.version>1.39.0</apache.calcite.version>
     </properties>
     <dependencies>
         <dependency>
@@ -76,13 +76,16 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
-
-        <!-- apache calcite -->
         <dependency>
             <groupId>org.apache.calcite</groupId>
             <artifactId>calcite-core</artifactId>
             <version>${apache.calcite.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
